--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,6 @@
 body {
     font-family: Arial, sans-serif;
-    background-color: #f1f1f1;
+    background-color: #008000;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -65,4 +65,5 @@ input[type="text"] {
     border-radius: 10px;
     margin-top: 20px;
 }
+
 
